--- a/index.html
+++ b/index.html
@@ -3,257 +3,240 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn-icons-png.flaticon.com/512/189/189688.png" rel="icon" type="image/png"/>
-    <title id="dynamicTitle">Kilometer To Mile (km to mi) Converter</title>
-    <meta content="Kilometer To Mile (km to mi) Converter - Convert kilometers to miles easily using our online tool." id="metaDescription" name="description"/>
+    <title id="dynamicTitle">KM to Miles Converter</title>
+    <meta content="Easily convert kilometers to miles with our fast, accurate online tool." id="metaDescription" name="description"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
 
     <style>
-    body {
-        font-family: 'Poppins', Arial, sans-serif;
+    * {
+        box-sizing: border-box;
         margin: 0;
         padding: 0;
-        background: linear-gradient(135deg, #f0f4f8, #d9e2ec);
-        color: #2d3748;
-        line-height: 1.6;
     }
-    #header {
-        background: linear-gradient(90deg, #4a00e0, #8e2de2);
-        color: #fff;
-        padding: 30px 20px;
-        text-align: center;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    body {
+        font-family: 'Inter', sans-serif;
+        background: #f4f7fa;
+        color: #1f2a44;
+        line-height: 1.5;
     }
-    #header h1 {
-        margin: 0;
-        font-size: 2.5em;
+    .container {
+        display: flex;
+        min-height: 100vh;
+    }
+    .sidebar {
+        width: 250px;
+        background: #ffffff;
+        padding: 20px;
+        box-shadow: 2px 0 10px rgba(0, 0, 0, 0.05);
+        position: fixed;
+        height: 100%;
+        overflow-y: auto;
+    }
+    .sidebar h2 {
+        font-size: 1.5em;
+        color: #14b8a6;
+        margin-bottom: 20px;
+    }
+    .sidebar nav ul {
+        list-style: none;
+    }
+    .sidebar nav ul li {
+        margin: 10px 0;
+    }
+    .sidebar nav ul li a {
+        text-decoration: none;
+        color: #1f2a44;
         font-weight: 600;
-        text-transform: uppercase;
-        letter-spacing: 1px;
+        transition: color 0.3s;
     }
-    #header h1 a {
-        color: #fff;
+    .sidebar nav ul li a:hover {
+        color: #14b8a6;
+    }
+    .main-content {
+        margin-left: 250px;
+        flex-grow: 1;
+        padding: 40px;
+    }
+    .header {
+        background: #ffffff;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        margin-bottom: 30px;
+    }
+    .header h1 {
+        font-size: 2em;
+        color: #1f2a44;
+    }
+    .header h1 a {
+        color: #14b8a6;
         text-decoration: none;
     }
-    #content {
-        max-width: 900px;
-        margin: 30px auto;
-        padding: 25px;
-        background: #fff;
-        border-radius: 15px;
-        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
-    }
-    #footer {
-        text-align: center;
+    .card {
+        background: #ffffff;
         padding: 20px;
-        background: linear-gradient(90deg, #2b6cb0, #3182ce);
-        color: #fff;
-        font-size: 0.9em;
-        box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
-    }
-    #calculator {
-        margin: 30px 0;
-        padding: 20px;
-        background: linear-gradient(135deg, #e9d8fd, #c3dafe);
         border-radius: 10px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        position: relative;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        margin-bottom: 20px;
     }
-    #calculator input {
-        padding: 12px;
-        margin: 10px 0;
+    .calculator input {
+        padding: 10px;
         width: 100%;
-        max-width: 250px;
-        border: 2px solid #d1d5db;
-        border-radius: 8px;
+        max-width: 200px;
+        border: 1px solid #d1d5db;
+        border-radius: 5px;
         font-size: 1em;
-        transition: border-color 0.3s ease;
-        box-sizing: border-box;
+        margin-bottom: 10px;
     }
-    #calculator input:focus {
-        border-color: #4a00e0;
-        outline: none;
-    }
-    #calculator button {
-        padding: 12px 20px;
-        margin: 10px 0;
-        background: linear-gradient(90deg, #4a00e0, #8e2de2);
+    .calculator button {
+        padding: 10px 20px;
+        background: #14b8a6;
         color: #fff;
         border: none;
-        border-radius: 8px;
-        font-size: 1em;
+        border-radius: 5px;
         cursor: pointer;
-        transition: transform 0.2s ease, box-shadow 0.2s ease;
-        width: 100%;
-        max-width: 250px;
-        box-sizing: border-box;
+        transition: background 0.3s;
     }
-    #calculator button:hover {
-        transform: translateY(-2px);
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    .calculator button:hover {
+        background: #0d9488;
     }
-    #calculator p#result {
+    .result {
         margin-top: 15px;
         font-size: 1.2em;
-        color: #2d3748;
-        font-weight: 500;
-        word-wrap: break-word;
-        text-align: center;
+        font-weight: 600;
+        color: #14b8a6;
     }
-    .loader {
-        display: none;
-        border: 4px solid #f3f3f3;
-        border-top: 4px solid #4a00e0;
-        border-radius: 50%;
-        width: 30px;
-        height: 30px;
-        animation: spin 1s linear infinite;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
-    @keyframes spin {
-        0% { transform: translate(-50%, -50%) rotate(0deg); }
-        100% { transform: translate(-50%, -50%) rotate(360deg); }
-    }
-    .conversion-grid {
+    .grid {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-        gap: 10px;
-        margin-top: 20px;
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        gap: 15px;
     }
-    .conversion-item {
-        background: #f9f9f9;
-        border: 1px solid #ddd;
-        border-radius: 8px;
+    .grid-item {
+        background: #f9fafb;
         padding: 10px;
         text-align: center;
-        transition: transform 0.2s ease, box-shadow 0.2s ease;
+        border-radius: 5px;
+        transition: transform 0.3s;
     }
-    .conversion-item:hover {
-        transform: translateY(-2px);
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    .grid-item:hover {
+        transform: scale(1.05);
     }
-    .conversion-item a {
+    .grid-item a {
+        color: #14b8a6;
         text-decoration: none;
-        color: #4a00e0;
-        font-weight: 500;
+        font-weight: 600;
     }
-    .conversion-item a:hover {
-        color: #8e2de2;
-    }
-    .conversion-table {
-        margin-top: 20px;
-    }
-    .conversion-table table {
+    .table {
         width: 100%;
         border-collapse: collapse;
+        margin-top: 20px;
     }
-    .conversion-table th, .conversion-table td {
+    .table th, .table td {
         padding: 10px;
-        border: 1px solid #ddd;
+        border: 1px solid #e5e7eb;
         text-align: center;
     }
-    .conversion-table th {
-        background: #4a00e0;
+    .table th {
+        background: #14b8a6;
         color: #fff;
     }
-    #conversionFormula {
-        text-align: center;
-        max-width: 600px;
-        margin: 20px auto;
-        background: linear-gradient(135deg, #fefcbf, #fed7aa);
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    .formula, .steps, .explanation {
+        margin-top: 20px;
+        padding: 15px;
+        background: #f9fafb;
+        border-radius: 5px;
     }
-    #conversionSteps {
-        text-align: center;
-        max-width: 600px;
-        margin: 0 auto;
+    .formula h3, .steps h3, .explanation h3 {
+        color: #14b8a6;
+        margin-bottom: 10px;
     }
-    #explanation {
-        text-align: left;
-        max-width: 600px;
-        margin: 20px auto;
-    }
-    #sitemapContainer {
-        display: none;
-        margin: 20px 0;
-    }
-    #sitemapContainer pre {
-        margin: 0;
-        white-space: pre-wrap;
-        font-family: monospace;
+    .sitemap pre {
         background: #f9fafb;
         padding: 15px;
-        border-radius: 8px;
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+        border-radius: 5px;
+        font-size: 0.9em;
+        white-space: pre-wrap;
     }
-    @media (max-width: 600px) {
-        .conversion-grid {
-            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    .footer {
+        text-align: center;
+        padding: 20px;
+        background: #ffffff;
+        box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.05);
+        margin-top: 40px;
+    }
+    @media (max-width: 768px) {
+        .sidebar {
+            width: 100%;
+            height: auto;
+            position: relative;
+            box-shadow: none;
         }
-        #header h1 {
-            font-size: 1.5em;
-        }
-        #content {
-            margin: 10px;
-            padding: 15px;
+        .main-content {
+            margin-left: 0;
+            padding: 20px;
         }
     }
     </style>
 </head>
 <body>
-    <div id="header">
-        <h1><a href="/" onclick="navigateTo('/'); return false;">Kilometer to Mile Converter</a></h1>
-    </div>
-    <div id="content">
-        <div id="calculator">
-            <div style="text-align: center;">
-                <input id="inputValue" placeholder="Enter kilometers (e.g., 55)" type="number"/>
-                <button onclick="convertKmToMiles()">Convert to Miles</button>
+    <div class="container">
+        <aside class="sidebar">
+            <h2>Quick Links</h2>
+            <nav>
+                <ul>
+                    <li><a href="/" onclick="navigateTo('/'); return false;">Home</a></li>
+                    <li><a href="/p/sitemap.xml" onclick="navigateTo('/p/sitemap.xml'); return false;">Sitemap</a></li>
+                </ul>
+            </nav>
+        </aside>
+        <main class="main-content">
+            <div class="header">
+                <h1><a href="/" onclick="navigateTo('/'); return false;">KM to Miles Converter</a></h1>
             </div>
-            <div class="loader" id="loader"></div>
-            <p id="result"></p>
-        </div>
-        <div id="gridContainer">
-            <div class="conversion-grid"></div>
-        </div>
-        <div id="sitemapContainer">
-            <h2>Sitemap Preview</h2>
-            <pre id="sitemap"></pre>
-            <p><a href="/sitemap.xml" target="_blank">View Full Sitemap</a></p>
-        </div>
-        <div id="detailedContent" style="display: none;">
-            <div class="conversion-table">
-                <h3>Conversion Table (Incremental Values)</h3>
-                <table id="kmToMilesTable">
-                    <thead>
-                        <tr>
-                            <th>Kilometers (km)</th>
-                            <th>Miles (mi)</th>
-                        </tr>
-                    </thead>
-                    <tbody></tbody>
-                </table>
+            <div class="card calculator">
+                <input id="inputValue" placeholder="Enter KM (e.g., 10)" type="number"/>
+                <button onclick="convertKmToMiles()">Convert</button>
+                <div class="result" id="result"></div>
             </div>
-            <div id="conversionFormula">
-                <h3>Conversion Formula</h3>
-                <p>miles = kilometers × 0.621371</p>
+            <div class="card" id="gridContainer">
+                <div class="grid"></div>
             </div>
-            <div id="conversionSteps">
-                <h3>Step-by-Step Conversion</h3>
-                <p id="stepExplanation"></p>
+            <div class="card" id="sitemapContainer" style="display: none;">
+                <h3>Sitemap Preview</h3>
+                <pre id="sitemap"></pre>
+                <p><a href="/sitemap.xml" target="_blank">View Full Sitemap</a></p>
             </div>
-            <div id="explanation">
-                <h3>Explanation</h3>
-                <p id="explanationText"></p>
+            <div class="card" id="detailedContent" style="display: none;">
+                <div class="table-container">
+                    <h3>Nearby Conversions</h3>
+                    <table class="table" id="kmToMilesTable">
+                        <thead>
+                            <tr>
+                                <th>KM</th>
+                                <th>Miles</th>
+                            </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+                </div>
+                <div class="formula">
+                    <h3>How It Works</h3>
+                    <p>Multiply kilometers by 0.621371 to get miles.</p>
+                </div>
+                <div class="steps">
+                    <h3>Conversion Steps</h3>
+                    <p id="stepExplanation"></p>
+                </div>
+                <div class="explanation">
+                    <h3>Why It Matters</h3>
+                    <p id="explanationText"></p>
+                </div>
             </div>
-        </div>
-    </div>
-    <div id="footer">
-        <p>© 2025 Kilometer To Mile Converter</p>
+            <div class="footer">
+                <p>© 2025 KM to Miles Converter. All rights reserved.</p>
+            </div>
+        </main>
     </div>
 
     <script>
@@ -261,16 +244,16 @@
         const titleElement = document.getElementById('dynamicTitle');
         const metaDescription = document.getElementById('metaDescription');
         if (!isNaN(km)) {
-            document.title = `${km} Kilometers To Miles (km to mi) Converter`;
-            titleElement.textContent = `${km} Kilometers To Miles (km to mi) Converter`;
+            document.title = `${km} KM to Miles Converter`;
+            titleElement.textContent = `${km} KM to Miles Converter`;
             if (metaDescription) {
-                metaDescription.setAttribute('content', `Convert ${km} kilometers to miles (km to mi) easily using our online tool. Accurate and fast conversion.`);
+                metaDescription.setAttribute('content', `Convert ${km} kilometers to miles instantly with our easy-to-use tool.`);
             }
         }
     }
 
     function getBaseUrl() {
-        return window.location.origin; // Root domain, e.g., https://username.github.io
+        return window.location.origin;
     }
 
     function navigateTo(path) {
@@ -297,8 +280,8 @@
             sitemapContainer.style.display = 'none';
             detailedContent.style.display = 'none';
             generateConversionGrid();
-            document.title = 'Kilometer To Mile (km to mi) Converter';
-            document.getElementById('metaDescription').setAttribute('content', 'Kilometer To Mile (km to mi) Converter - Convert kilometers to miles easily using our online tool.');
+            document.title = 'KM to Miles Converter';
+            document.getElementById('metaDescription').setAttribute('content', 'Easily convert kilometers to miles with our fast, accurate online tool.');
         } else if (currentPath === '/p/sitemap.xml') {
             gridContainer.style.display = 'none';
             detailedContent.style.display = 'none';
@@ -311,17 +294,17 @@
             updatePageMetadata(km);
             showDetailedConversion(km);
         } else {
-            navigateTo('/'); // Redirect unknown paths to homepage
+            navigateTo('/');
         }
     }
 
     function generateConversionGrid() {
-        const grid = document.querySelector('.conversion-grid');
+        const grid = document.querySelector('.grid');
         grid.innerHTML = '';
-        for (let i = 1; i <= 500; i++) {
+        for (let i = 1; i <= 500; i += 10) { // Show fewer items for simplicity
             const gridItem = document.createElement('div');
-            gridItem.className = 'conversion-item';
-            gridItem.innerHTML = `<a href="/${i}-km-to-mi" onclick="navigateTo('/${i}-km-to-mi'); return false;">${i} km to mi</a>`;
+            gridItem.className = 'grid-item';
+            gridItem.innerHTML = `<a href="/${i}-km-to-mi" onclick="navigateTo('/${i}-km-to-mi'); return false;">${i} KM</a>`;
             grid.appendChild(gridItem);
         }
     }
@@ -344,26 +327,25 @@
         const resultDiv = document.getElementById('result');
         inputValue.value = km;
         const miles = km * 0.621371;
-        resultDiv.innerHTML = `<strong>${km} km = ${miles.toFixed(2)} miles</strong>`;
+        resultDiv.innerHTML = `${km} KM equals ${miles.toFixed(2)} miles`;
 
         const tableBody = document.querySelector('#kmToMilesTable tbody');
         tableBody.innerHTML = '';
         for (let i = 1; i <= 9; i++) {
             const incrementalValue = km + (i / 10);
             const convertedValue = incrementalValue * 0.621371;
-            tableBody.innerHTML += `<tr><td>${incrementalValue.toFixed(1)} km</td><td>${convertedValue.toFixed(2)} mi</td></tr>`;
+            tableBody.innerHTML += `<tr><td>${incrementalValue.toFixed(1)}</td><td>${convertedValue.toFixed(2)}</td></tr>`;
         }
 
         document.getElementById('stepExplanation').innerHTML = `
-            <p><strong>Step 1:</strong> Start with ${km} km</p>
-            <p><strong>Step 2:</strong> Multiply by 0.621371: ${km} × 0.621371 = ${miles.toFixed(2)} mi</p>
-            <p><strong>Step 3:</strong> For incremental values, add 0.1 km: ${km} + 0.1 = ${(km + 0.1).toFixed(1)} km</p>
-            <p><strong>Step 4:</strong> Multiply incrementally: ${(km + 0.1).toFixed(1)} × 0.621371 = ${((km + 0.1) * 0.621371).toFixed(2)} mi</p>
+            1. Take ${km} kilometers.<br>
+            2. Multiply by 0.621371.<br>
+            3. Get ${miles.toFixed(2)} miles.<br>
+            4. Add 0.1 KM for next steps, e.g., ${(km + 0.1).toFixed(1)} KM = ${((km + 0.1) * 0.621371).toFixed(2)} miles.
         `;
 
         document.getElementById('explanationText').innerHTML = `
-            Converting kilometers to miles is a straightforward process that involves a simple multiplication. To begin, we start with our initial value of ${km} kilometers. The conversion factor between kilometers and miles is 0.621371, which means that every kilometer is equivalent to approximately 0.621371 miles. 
-            To perform the conversion, we multiply ${km} by 0.621371, resulting in ${miles.toFixed(2)} miles. This gives us our conversion.
+            Switching from kilometers to miles is quick and easy! Start with ${km} KM, multiply by 0.621371 (the magic number for this conversion), and you’ll land on ${miles.toFixed(2)} miles. It’s a handy trick for travel, fitness, or just satisfying your curiosity!
         `;
     }
 
