--- a/404.html
+++ b/404.html
@@ -183,7 +183,7 @@
             <nav>
                 <a href="/" onclick="navigateTo('/'); return false;">Home</a>
                 <a href="/sitemap.xml">Sitemap</a>
-                <a href="/p/sitemap.xml" onclick="navigateTo('/p/sitemap.xml'); return false;">Sitemap Preview</a>
+                <a href="/sitemap.xml" onclick="navigateTo('/sitemap.xml'); return false;">sitemap.xml</a>
             </nav>
         </div>
         <div class="card calculator">
