--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="ZkpoxP0LQ7I285jytdTYthLxf0HPp0dMykdKwEEqk1Y" />
     <meta charset="UTF-8">
     <link href="https://cdn-icons-png.flaticon.com/512/189/189688.png" rel="icon" type="image/png"/>
     <title id="dynamicTitle">KM to Miles Converter</title>
