--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="google-site-verification" content="ZkpoxP0LQ7I285jytdTYthLxf0HPp0dMykdKwEEqk1Y" />
     <meta charset="UTF-8">
-    <link href="https://cdn-icons-png.flaticon.com/512/189/189688.png" rel="icon" type="image/png"/>
+    <link href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcStkdtDJtePXbabxgXUdOKT6kbNdK3XmPS0Got8e8K6VBrSMxFRjd4HEwF9&s=10" rel="icon" type="image/png"/>
     <title id="dynamicTitle">KM to Miles Converter</title>
     <meta content="Easily convert kilometers to miles with our fast, accurate online tool." id="metaDescription" name="description"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
